<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/titlebutton"
            android:fontFamily="@font/bmjua_ttf"
            android:text="@string/name" 
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="510dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btctext"
                    android:fontFamily="@font/bmjua_ttf"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/ethtext"
                    android:fontFamily="@font/bmjua_ttf"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/bchtext"
                    android:fontFamily="@font/bmjua_ttf"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/xrptext"
                    android:fontFamily="@font/bmjua_ttf"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/eostext"
                    android:fontFamily="@font/bmjua_ttf"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="TextView"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/accmoney"
                    android:fontFamily="@font/bmjua_ttf"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/curmoney"
                    android:fontFamily="@font/bmjua_ttf"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/btctext2"
                        android:fontFamily="@font/bmjua_ttf"
                        android:background="@drawable/border"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/btctext3"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/btctext4"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/ethtext2"
                        android:fontFamily="@font/bmjua_ttf"
                        android:background="@drawable/border"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/ethtext3"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/ethtext4"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/bchtext2"
                        android:fontFamily="@font/bmjua_ttf"
                        android:background="@drawable/border"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/bchtext3"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/bchtext4"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/xrptext2"
                        android:fontFamily="@font/bmjua_ttf"
                        android:background="@drawable/border"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/xrptext3"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/xrptext4"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/eostext2"
                        android:fontFamily="@font/bmjua_ttf"
                        android:background="@drawable/border"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/eostext3"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/eostext4"
                            android:fontFamily="@font/bmjua_ttf"
                            android:background="@drawable/border"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/accmoney2"
                    android:fontFamily="@font/bmjua_ttf"
                    android:background="@drawable/border"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/curmoney2"
                    android:fontFamily="@font/bmjua_ttf"
                    android:background="@drawable/border"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textSize="24sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/bmjua_ttf"
                android:onClick="onChangeIns"
                android:text="@string/instruction"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/bmjua_ttf"
                android:onClick="onChangeStock"
                android:text="@string/fund"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/bmjua_ttf"
                android:onClick="onChangeDepo"
                android:text="@string/transfer"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:fontFamily="@font/bmjua_ttf"
                android:onClick="onChangeLoanRepayment"
                android:text="@string/loan"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

